This is an update to my index file

--- a/index.html
+++ b/index.html
@@ -103,3 +103,39 @@
           
         
   </div>
+
+  <div>
+    <h2><center>PORTFOLIO</center></h2>
+  </div><br><br>
+
+<div class="row">
+ 
+  
+  <div class="col-sm-3">
+    <img src="./IP3/assets/portfolio/work4.jpg"><br>
+  </div>
+  <div class="col-sm-3">
+    <img src="./IP3/assets/portfolio/work3.jpg"><br>
+  </div>
+  <div class="col-sm-3">
+    <img src="./IP3/assets/portfolio/work1.jpg"><br>
+  </div>
+  <div class="col-sm-3">
+    <img src="./IP3/assets/portfolio/work2.jpg"><br>
+  </div>
+</div><br><br>
+
+<div class="row">
+    <div class="col-sm-3">
+      <img src="./IP3/assets/portfolio/work5.jpg"><br>
+    </div>
+    <div class="col-sm-3">
+      <img src="./IP3/assets/portfolio/work6.jpg"><br>
+    </div>
+    <div class="col-sm-3">
+      <img src="./IP3/assets/portfolio/work7.jpg"><br>
+    </div>
+    <div class="col-sm-3">
+      <img src="./IP3/assets/portfolio/work8.jpg"><br>
+    </div>
+</div>
