--- a/index.html
+++ b/index.html
@@ -139,3 +139,26 @@
       <img src="./IP3/assets/portfolio/work8.jpg"><br>
     </div>
 </div>
+
+</div><br><br>
+        
+<div class="row">
+        <img src="./IP3/assets/backgrounds/c_image.jpg">
+      <h1><center>CONTACT US</center></h1>
+      <div class="contact">
+        
+        <div class="contactin">
+          <form>
+            <div id="input1" class="form-column-small-6">
+              <input type="text" name="Name" placeholder="Name...">
+            </div>
+            <div id="input2" class="form-column-small-6">
+              <input type="text" name="Email" placeholder="Email...">
+            </div>
+            <div id="input3" class="form-column-small-6">
+              <input type="text" name="Your Message" placeholder="Your Message here">
+            </div>
+          </form>
+        </div>
+      </div>
+</div>
