--- a/index.html
+++ b/index.html
@@ -162,3 +162,27 @@
         </div>
       </div>
 </div>
+
+<div class="row icons">
+  <img src="./IP3/assets/social_icons/twitter.png" alt="twitter">
+  <img src="./IP3/assets/social_icons/dribble.png" alt="dribble">
+  <img src="./IP3/assets/social_icons/facebook.png" alt="facebook">
+  <img src="./IP3/assets/social_icons/g_plus.png" alt="google plus">
+  <img src="./IP3/assets/social_icons/skype.png" alt="skype">
+  <img src="./IP3/assets/social_icons/you_tube.png" alt="you tube">
+  <img src="./IP3/assets/social_icons/behance.png" alt="behance">
+  <img src="./IP3/assets/social_icons/pinterest.png" alt="pinterest">
+  <img src="./IP3/assets/social_icons/stumble_upon.png" alt="stumble upon">
+  <img src="./IP3/assets/social_icons/flickr.png" alt="flickr">
+</div>
+
+<div class="row foot">
+  <p><center>DELANI STUDIOS</center><br>2015</p>
+</div>
+</div>        
+
+
+<script src="js/scripts.js"></script>
+
+</body>
+</html>
