This is an update to my html file

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 
         
-              <div class="row">
+              <div class="container-fluid" id="cont">
                 
                   <h1><center>CONTACT US</center></h1>
                   <div class="contact">
