This is an update commit for all my files and directories

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <link rel="stylesheet" href="CSS/bootstrap.css">
   <link rel="stylesheet" href="CSS/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">\
-  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us3.list-manage.com","uuid":"ff108c02549463d2ecbd70df7","lid":"19dca7f813","uniqueMethods":true}) })</script>
+  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js"
+    data-dojo-config="usePlainJson: true, isDebug: false"></script>
+  <script
+    type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function (L) { L.start({ "baseUrl": "mc.us3.list-manage.com", "uuid": "ff108c02549463d2ecbd70df7", "lid": "19dca7f813", "uniqueMethods": true }) })</script>
 </head>
 
 <body>
@@ -21,7 +24,7 @@
 
 
 
-  <div class="jumbotron">
+  
 
     <div class="container-fluid" id="header">
       <div class="row" id="del">
@@ -101,8 +104,9 @@
       <div class="col-sm-4">
         <div class="col click0">
           <center>
-                      <img class="hide0" src="./Resources/services_icons/design_icon.png" alt="Design"><br>
-          <h2>DESIGN</h2></center> <br>
+            <img class="hide0" src="./Resources/services_icons/design_icon.png" alt="Design"><br>
+            <h2>DESIGN</h2>
+          </center> <br>
 
 
           <p class="show0">Our design practice offers a full range of services including
@@ -117,9 +121,11 @@
 
       <div class="col-sm-4">
         <div class="col click1">
-          <div class="logo"><center>
-            <img class="hide1" src="./Resources/services_icons/dev_icon.png" alt="Development">
-            <h2>DEVELOPMENT</h2></center> <br>
+          <div class="logo">
+            <center>
+              <img class="hide1" src="./Resources/services_icons/dev_icon.png" alt="Development">
+              <h2>DEVELOPMENT</h2>
+            </center> <br>
 
 
             <p class="show1">All engineers are fluent in the latest enterprise, mobile and web development
@@ -134,8 +140,9 @@
       <div class="col-sm-4">
         <div class="col click2">
           <center>
-          <img class="hide2" src="./Resources/services_icons/product_icon.png" alt="Product Management">
-          <h2>PRODUCT MANAGEMENT</h2></center> <br>
+            <img class="hide2" src="./Resources/services_icons/product_icon.png" alt="Product Management">
+            <h2>PRODUCT MANAGEMENT</h2>
+          </center> <br>
 
 
           <p class="show2">Planning and development is iterative. Because we are constantly coding and testing the
@@ -145,14 +152,16 @@
       </div>
     </div>
 
-  
 
-  
+
+
     <div class="container">
-          <h1><center>PORTFOLIO</center></h1>
+      <h1>
+        <center>PORTFOLIO</center>
+      </h1>
       <div id="good">
 
-        
+
       </div><br><br>
 
       <div class="row">
@@ -238,67 +247,67 @@
           </div>
         </div>
       </div>
-    
-  </div><br><br>
 
-  <div class="container-fluid" id="cont">
+    </div><br><br>
 
-    <h1>
-      <center>CONTACT US</center>
-    </h1>
-    <div class="contact">
+    <div class="container-fluid" id="cont">
 
-      <div class="row d-flex justify-content-center">
-        <div class="contactinfo">
-          <form class="form-row mb-4">
-            <div class="col-md-6">
-              <input type="text" name="Name" placeholder="Name...">
-            </div>
-            <div class="col-md-6"></div>
-            <input type="text" name="Email" placeholder="Email...">
+      <h1>
+        <center>CONTACT US</center>
+      </h1>
+      <div class="contact">
+
+        <div class="row d-flex justify-content-center">
+          <div class="contactinfo">
+            <form class="form-row mb-4">
+              <div class="col-md-6">
+                <input type="text" name="Name" placeholder="Name...">
+              </div>
+              <div class="col-md-6"></div>
+              <input type="text" name="Email" placeholder="Email...">
+          </div>
+
+          </form>
         </div>
 
-        </form>
+        <div class="row d-flex justify-content-center">
+          <form class="form-row mb-4">
+            <div class="col text-center">
+              <textarea name="message" id="Your Message" cols="60" rows="10" placeholder="Your Message here"></textarea>
+            </div>
+          </form>
+        </div>
+        <div class="row d-flex justify-content-center">
+
+          <form>
+            <button type="submit" id="btn" class="btn btn-primary">Submit</button>
+          </form>
+
+        </div>
+
       </div>
-
-      <div class="row d-flex justify-content-center">
-        <form class="form-row mb-4">
-          <div class="col text-center">
-            <textarea name="message" id="Your Message" cols="60" rows="10" placeholder="Your Message here"></textarea>
-          </div>
-        </form>
-      </div>
-      <div class="row d-flex justify-content-center">
-
-        <form>
-          <button type="submit" id="btn" class="btn btn-primary">Submit</button>
-        </form>
-
-      </div>
-
     </div>
-  </div>
 
 
-  <div class="container came">
-    <img src="./Resources/social_icons/twitter.png" alt="twitter">
-    <img src="./Resources/social_icons/dribble.png" alt="dribble">
-    <img src="./Resources/social_icons/facebook.png" alt="facebook">
-    <img src="./Resources/social_icons/g_plus.png" alt="google plus">
-    <img src="./Resources/social_icons/skype.png" alt="skype">
-    <img src="./Resources/social_icons/you_tube.png" alt="you tube">
-    <img src="./Resources/social_icons/behance.png" alt="behance">
-    <img src="./Resources/social_icons/pinterest.png" alt="pinterest">
-    <img src="./Resources/social_icons/stumble_upon.png" alt="stumble upon">
-    <img src="./Resources/social_icons/flickr.png" alt="flickr">
-  </div>
+    <div class="container came">
+      <img src="./Resources/social_icons/twitter.png" alt="twitter">
+      <img src="./Resources/social_icons/dribble.png" alt="dribble">
+      <img src="./Resources/social_icons/facebook.png" alt="facebook">
+      <img src="./Resources/social_icons/g_plus.png" alt="google plus">
+      <img src="./Resources/social_icons/skype.png" alt="skype">
+      <img src="./Resources/social_icons/you_tube.png" alt="you tube">
+      <img src="./Resources/social_icons/behance.png" alt="behance">
+      <img src="./Resources/social_icons/pinterest.png" alt="pinterest">
+      <img src="./Resources/social_icons/stumble_upon.png" alt="stumble upon">
+      <img src="./Resources/social_icons/flickr.png" alt="flickr">
+    </div>
 
-  <div>
-    <p>
-      <center>DELANI STUDIOS<br>2019</center>
-    </p>
-  </div>
-  </div><br><br>
+    <div>
+      <p>
+        <center>DELANI STUDIOS<br>2019</center>
+      </p>
+    </div>
+  
 
 
   <script type="text/javascript" src="js/jquery-3.4.0.min.js"></script>
