--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/mdb.min.css">
   <link rel="stylesheet" href="CSS/bootstrap.css">
   <link rel="stylesheet" href="CSS/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">\
+  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
   <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js"
     data-dojo-config="usePlainJson: true, isDebug: false"></script>
   <script
@@ -19,295 +19,288 @@
 </head>
 
 <body>
-
-
-
-
-
-  
-
-    <div class="container-fluid" id="header">
-      <div class="row" id="del">
-        <div class="col-md-12">
-          <img src='./Resources/logo/logo.png' class="img-fluid"><br><br><br>
-        </div>
+  <div class="container-fluid" id="header">
+    <div class="row" id="del">
+      <div class="col-md-12">
+        <img src='./Resources/logo/logo.png' class="img-fluid"><br><br><br>
       </div>
-      <div class="row">
-        <div class="col-md-12">
-          <h1>WELCOME</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <h1>TO DELANI STUDIO</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
-        </div>
-      </div><br><br><br>
-      <div class="row">
-
-        <div class="col-md-12">
-          <img src='./Resources/mouse_click.png' class="img-fluid" id="mouse">
-        </div>
-      </div>
-    </div><br><br><br>
-
-    <div class="container">
-      <div id="About">
-        <h1>ABOUT US</h1>
-
-
-        <p></p>When you work with us, you are part of the team of committed collaborators.<br>
-        All aspects of our software development process are intergrated, iterative and agile.<br><br><br>
-
-
-
-        Our approach unifies design, development and<br>
-        product management to create exceptional products.<br>
-        We start each project by understanding your business goals,<br>
-        the user's needs and the product requirements.<br>
-        then we help translate them into effective and elegant solutions.<br>
-
-      </div>
-    </div><br><br><br>
-
-
-
-    <div class="container" id="services">
-
-      <h1>SERVICES</h1> <br><br><br>
-
-
-      <p>Before we sign a contract or write a line of code our team will spend the necessary<br> time needed to
-        understand your product vision.</p>
-      <p>The outcome of this scoping session is a proposal or high-level statement of work.<br>
-        Based on your requirements, we can provide a complete offering or just the pieces<br> you need.</p>
-
-    </div><br><br><br><br>
-
-    <div>
-      <h1>
-        <center>WHAT WE DO</center>
-      </h1><br> <br>
     </div>
-
-
-
-
+    <div class="row">
+      <div class="col-md-12">
+        <h1>WELCOME</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <h1>TO DELANI STUDIO</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+      </div>
+    </div><br><br><br>
     <div class="row">
 
+      <div class="col-md-12">
+        <img src='./Resources/mouse_click.png' class="img-fluid" id="mouse">
+      </div>
+    </div>
+  </div><br><br><br>
+
+  <div class="container">
+    <div id="About">
+      <h1>ABOUT US</h1>
 
 
-      <div class="col-sm-4">
-        <div class="col click0">
-          <center>
-            <img class="hide0" src="./Resources/services_icons/design_icon.png" alt="Design"><br>
-            <h2>DESIGN</h2>
-          </center> <br>
+      <p></p>When you work with us, you are part of the team of committed collaborators.<br>
+      All aspects of our software development process are intergrated, iterative and agile.<br><br><br>
 
 
-          <p class="show0">Our design practice offers a full range of services including
-            branding strategy, interaction and visual
-            design and user experience testing.
-            Througout your project, our designers create and implement visual designs and workflows, solicit user
-            feedback and work with you to make sure what gets built is what is needed.</p>
-        </div>
 
+      Our approach unifies design, development and<br>
+      product management to create exceptional products.<br>
+      We start each project by understanding your business goals,<br>
+      the user's needs and the product requirements.<br>
+      then we help translate them into effective and elegant solutions.<br>
+
+    </div>
+  </div><br><br><br>
+
+
+
+  <div class="container" id="services">
+
+    <h1>SERVICES</h1> <br><br><br>
+
+
+    <p>Before we sign a contract or write a line of code our team will spend the necessary<br> time needed to
+      understand your product vision.</p>
+    <p>The outcome of this scoping session is a proposal or high-level statement of work.<br>
+      Based on your requirements, we can provide a complete offering or just the pieces<br> you need.</p>
+
+  </div><br><br><br><br>
+
+  <div>
+    <h1>
+      <center>WHAT WE DO</center>
+    </h1><br> <br>
+  </div>
+
+
+
+
+  <div class="row">
+
+
+
+    <div class="col-sm-4">
+      <div class="col click0">
+        <center>
+          <img class="hide0" src="./Resources/services_icons/design_icon.png" alt="Design"><br>
+          <h2>DESIGN</h2>
+        </center> <br>
+
+
+        <p class="show0">Our design practice offers a full range of services including
+          branding strategy, interaction and visual
+          design and user experience testing.
+          Througout your project, our designers create and implement visual designs and workflows, solicit user
+          feedback and work with you to make sure what gets built is what is needed.</p>
       </div>
 
-
-      <div class="col-sm-4">
-        <div class="col click1">
-          <div class="logo">
-            <center>
-              <img class="hide1" src="./Resources/services_icons/dev_icon.png" alt="Development">
-              <h2>DEVELOPMENT</h2>
-            </center> <br>
-
-
-            <p class="show1">All engineers are fluent in the latest enterprise, mobile and web development
-              technologies.<br>They
-              collaborate with your team to write test and improve code on a daily basis using proven practices such as
-              test-driven development and pair programing.</p>
-          </div>
-
-        </div>
-      </div>
-
-      <div class="col-sm-4">
-        <div class="col click2">
-          <center>
-            <img class="hide2" src="./Resources/services_icons/product_icon.png" alt="Product Management">
-            <h2>PRODUCT MANAGEMENT</h2>
-          </center> <br>
-
-
-          <p class="show2">Planning and development is iterative. Because we are constantly coding and testing the
-            products we build are
-            always ready to go live. This iterative process allows gor changes as business requirements evolve.</p>
-        </div>
-      </div>
     </div>
 
 
+    <div class="col-sm-4">
+      <div class="col click1">
+        <div class="logo">
+          <center>
+            <img class="hide1" src="./Resources/services_icons/dev_icon.png" alt="Development">
+            <h2>DEVELOPMENT</h2>
+          </center> <br>
 
 
-    <div class="container">
-      <h1>
-        <center>PORTFOLIO</center>
-      </h1>
-      <div id="good">
-
-
-      </div><br><br>
-
-      <div class="row">
-
-        <div class="col-sm-3">
-          <div class="container display">
-
-            <img id="work4" src="./Resources/portfolio/work4.jpg"><br>
-            <div class="center">
-              <div class="overlay">work4</div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="container display">
-
-            <img id="work3" src="./Resources/portfolio/work3.jpg"><br>
-            <div class="center">
-              <div class="overlay">work3</div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="container display">
-
-            <img id="work1" src="./Resources/portfolio/work1.jpg"><br>
-            <div class="center">
-              <div class="overlay">work1</div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="container display">
-
-            <img id="work2" src="./Resources/portfolio/work2.jpg"><br>
-            <div class="center">
-              <div class="overlay">work2</div>
-            </div>
-          </div>
+          <p class="show1">All engineers are fluent in the latest enterprise, mobile and web development
+            technologies.<br>They
+            collaborate with your team to write test and improve code on a daily basis using proven practices such as
+            test-driven development and pair programing.</p>
         </div>
 
       </div>
+    </div>
 
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="container display">
-
-            <img id="work5" src="./Resources/portfolio/work5.jpg"><br>
-            <div class="center">
-              <div class="overlay">work5</div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-3">
-          <div class="container display">
-
-            <img id="work6" src="./Resources/portfolio/work6.jpg"><br>
-            <div class="center">
-              <div class="overlay">work6</div>
-            </div>
-          </div>
-        </div>
+    <div class="col-sm-4">
+      <div class="col click2">
+        <center>
+          <img class="hide2" src="./Resources/services_icons/product_icon.png" alt="Product Management">
+          <h2>PRODUCT MANAGEMENT</h2>
+        </center> <br>
 
 
-        <div class="col-sm-3">
-          <div class="container display">
-
-            <img id="work7" src="./Resources/portfolio/work7.jpg"><br>
-            <div class="center">
-              <div class="overlay">work7</div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-3">
-          <div class="container display">
-
-            <img id="work8" src="./Resources/portfolio/work8.jpg"><br>
-            <div class="center">
-              <div class="overlay">work8</div>
-            </div>
-          </div>
-        </div>
+        <p class="show2">Planning and development is iterative. Because we are constantly coding and testing the
+          products we build are
+          always ready to go live. This iterative process allows gor changes as business requirements evolve.</p>
       </div>
+    </div>
+  </div>
+
+
+
+
+  <div class="container">
+    <h1>
+      <center>PORTFOLIO</center>
+    </h1>
+    <div id="good">
+
 
     </div><br><br>
 
-    <div class="container-fluid" id="cont">
+    <div class="row">
 
-      <h1>
-        <center>CONTACT US</center>
-      </h1>
-      <div class="contact">
+      <div class="col-sm-3">
+        <div class="container display">
 
-        <div class="row d-flex justify-content-center">
-          <div class="contactinfo">
-            <form class="form-row mb-4">
-              <div class="col-md-6">
-                <input type="text" name="Name" placeholder="Name...">
-              </div>
-              <div class="col-md-6"></div>
-              <input type="text" name="Email" placeholder="Email...">
+          <img id="work4" src="./Resources/portfolio/work4.jpg"><br>
+          <div class="center">
+            <div class="overlay">work4</div>
           </div>
-
-          </form>
         </div>
+      </div>
+      <div class="col-sm-3">
+        <div class="container display">
 
-        <div class="row d-flex justify-content-center">
-          <form class="form-row mb-4">
-            <div class="col text-center">
-              <textarea name="message" id="Your Message" cols="60" rows="10" placeholder="Your Message here"></textarea>
-            </div>
-          </form>
+          <img id="work3" src="./Resources/portfolio/work3.jpg"><br>
+          <div class="center">
+            <div class="overlay">work3</div>
+          </div>
         </div>
-        <div class="row d-flex justify-content-center">
+      </div>
+      <div class="col-sm-3">
+        <div class="container display">
 
-          <form>
-            <button type="submit" id="btn" class="btn btn-primary">Submit</button>
-          </form>
-
+          <img id="work1" src="./Resources/portfolio/work1.jpg"><br>
+          <div class="center">
+            <div class="overlay">work1</div>
+          </div>
         </div>
+      </div>
+      <div class="col-sm-3">
+        <div class="container display">
 
+          <img id="work2" src="./Resources/portfolio/work2.jpg"><br>
+          <div class="center">
+            <div class="overlay">work2</div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col-sm-3">
+        <div class="container display">
+
+          <img id="work5" src="./Resources/portfolio/work5.jpg"><br>
+          <div class="center">
+            <div class="overlay">work5</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-3">
+        <div class="container display">
+
+          <img id="work6" src="./Resources/portfolio/work6.jpg"><br>
+          <div class="center">
+            <div class="overlay">work6</div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="col-sm-3">
+        <div class="container display">
+
+          <img id="work7" src="./Resources/portfolio/work7.jpg"><br>
+          <div class="center">
+            <div class="overlay">work7</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-3">
+        <div class="container display">
+
+          <img id="work8" src="./Resources/portfolio/work8.jpg"><br>
+          <div class="center">
+            <div class="overlay">work8</div>
+          </div>
+        </div>
       </div>
     </div>
 
+  </div><br><br>
 
-    <div class="container came">
-      <img src="./Resources/social_icons/twitter.png" alt="twitter">
-      <img src="./Resources/social_icons/dribble.png" alt="dribble">
-      <img src="./Resources/social_icons/facebook.png" alt="facebook">
-      <img src="./Resources/social_icons/g_plus.png" alt="google plus">
-      <img src="./Resources/social_icons/skype.png" alt="skype">
-      <img src="./Resources/social_icons/you_tube.png" alt="you tube">
-      <img src="./Resources/social_icons/behance.png" alt="behance">
-      <img src="./Resources/social_icons/pinterest.png" alt="pinterest">
-      <img src="./Resources/social_icons/stumble_upon.png" alt="stumble upon">
-      <img src="./Resources/social_icons/flickr.png" alt="flickr">
-    </div>
+  <div class="container-fluid" id="cont">
 
-    <div>
-      <p>
-        <center>DELANI STUDIOS<br>2019</center>
-      </p>
+    <h1>
+      <center>CONTACT US</center>
+    </h1>
+    <div class="contact">
+
+      <div class="row d-flex justify-content-center">
+        <div class="contactinfo">
+          <form class="form-row mb-4">
+            <div class="col-md-6">
+              <input type="text" name="Name" placeholder="Name...">
+            </div>
+            <div class="col-md-6"></div>
+            <input type="text" name="Email" placeholder="Email...">
+        </div>
+
+        </form>
+      </div>
+
+      <div class="row d-flex justify-content-center">
+        <form class="form-row mb-4">
+          <div class="col text-center">
+            <textarea name="message" id="Your Message" cols="60" rows="10" placeholder="Your Message here"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="row d-flex justify-content-center">
+
+        <form>
+          <button type="submit" id="btn" class="btn btn-primary">Submit</button>
+        </form>
+
+      </div>
+
     </div>
-  
+  </div>
+
+
+  <div class="container came">
+    <img src="./Resources/social_icons/twitter.png" alt="twitter">
+    <img src="./Resources/social_icons/dribble.png" alt="dribble">
+    <img src="./Resources/social_icons/facebook.png" alt="facebook">
+    <img src="./Resources/social_icons/g_plus.png" alt="google plus">
+    <img src="./Resources/social_icons/skype.png" alt="skype">
+    <img src="./Resources/social_icons/you_tube.png" alt="you tube">
+    <img src="./Resources/social_icons/behance.png" alt="behance">
+    <img src="./Resources/social_icons/pinterest.png" alt="pinterest">
+    <img src="./Resources/social_icons/stumble_upon.png" alt="stumble upon">
+    <img src="./Resources/social_icons/flickr.png" alt="flickr">
+  </div>
+
+  <div>
+    <p>
+      <center>DELANI STUDIOS<br>2019</center>
+    </p>
+  </div>
+
 
 
   <script type="text/javascript" src="js/jquery-3.4.0.min.js"></script>
